--- a/Sunday lawn care llc.html
+++ b/Sunday lawn care llc.html
@@ -458,6 +458,6 @@
     © 2026 Sundaw Lawn Care LLC · All rights reserved
 </footer>
 
-<script src="script.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
