--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <!-- Contact Form -->
     <section id="contact">
         <h2>Request a Free Quote</h2>
-        <form action="https://formspree.io/f/yourformid" method="POST">
+       <form action="http://localhost:3000/api/submit-quote" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="text" name="address" placeholder="Your Address" required>
             <input type="text" name="phone" placeholder="Phone Number" required>
